--- a/ExampleApi.Infrastructure/ExampleApi.Infrastructure.csproj
+++ b/ExampleApi.Infrastructure/ExampleApi.Infrastructure.csproj
@@ -1,6 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ExampleApi.Application\ExampleApi.Application.csproj" />
   </ItemGroup>
 
