added JWT options , using user secrets.

--- a/ExampleApi/appsettings.Development.json
+++ b/ExampleApi/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "JWTOptions": {
+    "Secret": "",
+    "ExpiryMinutes": 60,
+    "Issuer": "Grant-Shaw"
   }
 }
