--- a/ExampleApi/ExampleApi.csproj
+++ b/ExampleApi/ExampleApi.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>9e421595-4e3f-472a-9141-4d9fdeca82f3</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
