--- a/ExampleApi/appsettings.json
+++ b/ExampleApi/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWTOptions": {
+    "Secret": "",
+    "ExpiryMinutes": 0,
+    "Issuer": ""
+  }
 }
